pi-hole/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  namespace: pi-hole
  name: pi-hole
  labels:
    app: pi-hole
spec:
  selector:
    matchLabels:
      app: pi-hole
  template:
    metadata:
      labels:
        app: pi-hole
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9617"
    spec:
      hostNetwork: false
      shareProcessNamespace: false
      containers:
        - name: pi-hole
          image: index.docker.io/pihole/pihole@sha256:d899e498cb7beb5784aef9d62e1bb7f28b4ec3306cf96f4d1bc6cd62e26bf599
          ports:
            - name: http
              containerPort: 1080
              protocol: TCP
            - name: dns
              containerPort: 53
              protocol: UDP
          resources:
            requests:
              cpu: "50m"
              memory: "150M"
            limits:
              memory: "200M"
          volumeMounts:
            - name: pi-hole-data
              mountPath: /etc/pihole
              subPath: pihole
            - name: pi-hole-data
              mountPath: /etc/dnsmasq.d
              subPath: dnsmasq.d
        - name: exporter
          image: index.docker.io/ekofr/pihole-exporter@sha256:bd3fac5603edcd39e3ec158f29c58e7b0b253f5d1b81892b3185849cb3ad8602
          ports:
            - name: http
              containerPort: 9617
              hostPort: 9617
              protocol: TCP
      volumes:
        - name: pi-hole-data
          hostPath:
            path: /var/lib/pihole
