pi-hole/exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: pi-hole
  name: pi-hole-exporter
  labels:
    app: pi-hole-exporter
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector:
    matchLabels:
      app: pi-hole-exporter
  template:
    metadata:
      labels:
        app: pi-hole-exporter
      annotations:
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: pi-hole-exporter
          image: index.docker.io/ekofr/pihole-exporter@sha256:bd3fac5603edcd39e3ec158f29c58e7b0b253f5d1b81892b3185849cb3ad8602
          ports:
            - name: http
              containerPort: 9617
              protocol: TCP
